# SAE_BoardGameEval

./: .gitignore  .gitmodules  README.md  board_reconstruction.ipynb  feature_viz.ipynb  feature_viz_bestfeatures.ipynb  feature_viz_chess_bestfeatures.ipynb  feature_viz_othello.ipynb  feature_viz_othello_adam.ipynb  feature_viz_othello_utils.py  find_high_precision_features.ipynb  logan_interp.ipynb  othello_sae_inference_demo.ipynb  pyproject.toml  requirements.txt  setup.sh  submit_job.py  total_results.json
analysis/: L0_only.ipynb  all_statistics.ipynb  analysis.py  board_reconstruction_legend.excalidraw  board_reconstruction_vis.ipynb  board_state_functions.py  classifier_analysis.ipynb  correlation_sae_mlp.ipynb  eval_hparams.ipynb  eval_results.ipynb  lookup.ipynb  lookup_precision.ipynb  lookup_recall.ipynb  loss_recovered_bugfix.py  mlp_neuron_ablation.ipynb  sae_stats_analysis.ipynb
autoencoders/: README.md  download_saes.sh  gen_identity_ae_folders.ipynb
circuits/: analysis.py  analyze_mlp_vs_features.ipynb  chess_interp.py  chess_utils.py  create_boardstate_dataset.py  eval.ipynb  eval_board_reconstruction.py  eval_results.ipynb  eval_sae_as_classifier.py  evaluation.py  f1_analysis.ipynb  f1_analysis.py  figure_3var_coverage.ipynb  full_pipeline.ipynb  full_pipeline.py  full_pipeline_walkthrough.ipynb  get_eval_results.py  interp_measurement.ipynb  l0.ipynb  linear_probe_cosine_sim.ipynb  multiple_layers_full_pipeline.py  nanogpt.py  nanogpt_to_hf_transformers.py  nnsight_buffer.py  othello_buffer.py  othello_engine_utils.py  othello_train.py  train.py  (+7 more)
(+49 files in other folders)
